# jupyter-logs-mining-extension

./: .gitignore  README.md  manifest.in  pyproject.toml  setup.cfg  setup.py  test_extension.ipynb
mining_extension/: __init__.py  description.yaml  main.js
mining_extension/static/: README.md  description.yaml  main.js
