[tool.poetry]
name = "jupyter-mining-extension"
version = "0.0.1"
description = ""
license = "GPL-3.0-or-later"
authors = ["Your Name <you@example.com>"]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
notebook = "6.1.5"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter = "^1.0.0"

[tool.poetry.plugins."poetry-dynamic-plugins"]
include = ["poetry_include:*.toml"]

[tool.poetry.plugins."poetry-build"]
# By default, Poetry only includes Python files in packages, so we need to
# explicitly include our static directory
include = ["static/**"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
