[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "jupyter-mining-extension"
version = "0.0.1"
description = ""
license = "GPL-3.0-or-later"
authors = ["Your Name <you@example.com>"]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0"

[tool.poetry.scripts]
jupyter-mining-extension = "jupyter_mining_extension:main"

[tool.poetry.extras]
dev = ["pytest"]

[tool.setuptools]
zip_safe = false

[tool.setuptools.setup]
name = "jupyter-mining-extension"
version = "0.0.2"
description = "Jupyter extension for mining logs"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
license = "MIT"
packages = ["jupyter_mining_extension"]
include_package_data = true
zip_safe = false
