[metadata]
name = jupyter-mining-extension
version = 0.0.3
description = Jupyter extension for mining logs
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
zip_safe = True
include_package_data = True

[options.package_data]
example =  static/*.js, static/*.yaml
* = README.md